corrected hartree and exchange

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -426,5 +426,7 @@ Hund's coupling)
 \Sigma^{X,DMFT}_{l\sigma}
 &= - V\, n^{\sigma}_l -  \sum_{k\neq l} J_{lk} \, n^{\sigma}_{k}.               
 \end{align}
+\cng{CAUTION!} Does $U_0$ or $F_0$ recover the bare interaction? If $F_0=V$,
+then $U_0$ has to be replaced in the 5-orbital model by $V + \frac{8}{7}J_{avg}$.
 
 \end{document}
