--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -141,8 +141,8 @@ not to fix on a specific method yet.
 % \begin{align}
 % \Psi[G,W] &\approx \Psi^{GW}_{\mathrm{nonloc}}[G,W] + \Psi^{DMFT}_{\mathrm{loc}}[G,W].
 % \end{align}
-All other contributions to the full $\Psi$ are now \underline{defined} to be originiating from $\Psi_{\mathrm{nonloc}}[G,W]$.
-We now have to define what we actually mean by the two objects 
+All other contributions to the full $\Psi$ are now \underline{defined} to be originating from $\Psi_{\mathrm{nonloc}}[G,W]$.
+We now have to explain what we actually mean by the two objects 
 $\Psi_{\mathrm{nonloc}}$ and $\Psi_{\mathrm{loc}}$.
 
 % \bigskip
@@ -181,7 +181,7 @@ to treat the two terms
 \begin{align}
 \Psi[G,W] &\approx \Psi^A_{\mathrm{nonloc}}[G,W] + \Psi^B_{\mathrm{loc}}[G^{\mathrm{loc},L},W^{\mathrm{loc},L}] .
 \end{align}
-The main point here is \cng{IS THERE REALLY NO OVERLAP/DOUBLECOUNTING IN THIS SCHEME??}
+The main point here is \cng{IS THERE REALLY NO OVERLAP/DOUBLECOUNTING IN THIS SCHEME?}
 
 \bigskip
 
@@ -229,7 +229,8 @@ is removed from GW and replaced by the local impurity DMFT exchange. But this te
 of the local impurity charge. This contribution is not yet considered in the GW screening since no GW selfconsistency
 has been applied.
 \cng{Can we now do another GW calculation only replacing the new contribution from the impurity states?
-Then we perform a GW selfconsistency including the  local vertex corrections from DMFT, in similar spirit as Boehnke et al.}
+Then we perform a GW selfconsistency including the  local vertex corrections from DMFT, in similar spirit as Boehnke et al., but additionally with improved transitions between
+$L$ and $H$ which they do not update.}
 \end{description}
 
 
